--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #777;
+
+}
+
+h1 {
+  color: #fff;
+  padding-bottom: 50px;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
 }
 
 code {
